# libzip-rust

./: Cargo.toml  README.md  build.rs
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
src/c/: zip.h
